# deepagents

./: .release-please-manifest.json
.github/scripts/: check_lockfiles_pre_commit.py  check_release_deps.py  test_check_lockfiles_pre_commit.py  test_check_release_deps.py
.github/workflows/: check_release_deps.yml  ci.yml  harbor.yml  release.yml
examples/async-subagent-server/: .env.example  pyproject.toml  server.py  supervisor.py
examples/freight-rates/: .env.example  README.md  agent.py  pyproject.toml  server.py  tools.py
examples/repl_swarm/: README.md  swarm_agent.py
libs/acp/: CHANGELOG.md
libs/cli/: CHANGELOG.md  pyproject.toml
libs/code/: AGENTS.md  CHANGELOG.md  THREAT_MODEL.md  pyproject.toml
libs/code/deepagents_code/: _debug.py  _env_vars.py  _server_config.py  _textual_patches.py  _version.py  agent.py  app.py  config.py  config_commands.py  config_manifest.py  main.py  managed_tools.py  model_config.py  server.py  textual_adapter.py  theme.py  ui.py
libs/code/deepagents_code/integrations/: sandbox_config.py  sandbox_factory.py  sandbox_provider.py  sandbox_registry.py
libs/code/deepagents_code/widgets/: ask_user.py  chat_input.py  diff.py  (+4 more)
libs/deepagents/: CHANGELOG.md  pyproject.toml
libs/evals/: EVAL_CATALOG.md  Makefile  pyproject.toml
libs/evals/deepagents_harbor/: langsmith.py  metadata.py
libs/evals/scripts/: analyze.py
libs/partners/daytona/: CHANGELOG.md
libs/partners/modal/: CHANGELOG.md
libs/partners/quickjs/: CHANGELOG.md  README.md  pyproject.toml
libs/partners/runloop/: CHANGELOG.md
libs/talon/: CHANGELOG.md
(+58 files in other folders)
