[project]
name = "freight-rates-agent"
version = "0.1.0"
description = "Supply chain visibility agent combining FreightPulse and GoComet market intelligence"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.2.6",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
    "python-dotenv>=1.2.2",
    "httpx>=0.28.0",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "botbuilder-core>=4.16.0",
    "aiohttp>=3.14.1",
]

[tool.uv.sources]
deepagents = { path = "../../libs/deepagents", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
]
